<resources>
    <string name="app_name">StressLeaf Mental Health App</string>
    <string name="action_settings">Settings</string>
    <string name="Article1_Title">EASY WAYS FOR STUDENTS TO BOOST THEIR MENTAL HEALTH</string>
    <string name="Article2_Title">BREATHING TECHNIQUES FOR RELIEVING STRESS AND ANXIETY</string>
    <string name="Article3_Title">WAYS TO DE-STRESS AT HOME</string>
    <string name="Article4_Title">BEST FOODS TO EAT FOR A GOOD MOOD</string>
    <string name="Article5_Title">THE IMPORTANCE OF HOBBIES IN MENTAL HEALTH</string>
    <string name="Article6_Title">HOW TO MANAGE YOUR STRESS</string>
</resources>
