<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_final">

    <Button
        android:id="@+id/listview_layout_GoToArticle1_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/listview_rounded_btn_background"
        android:gravity="left"
        android:padding="15sp"
        android:text="@string/Article1_Title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/listview_layout_GoToArticle2_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/listview_rounded_btn_background"
        android:gravity="left"
        android:padding="15sp"
        android:text="@string/Article2_Title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview_layout_GoToArticle1_btn" />

    <Button
        android:id="@+id/listview_layout_GoToArticle3_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/listview_rounded_btn_background"
        android:gravity="left"
        android:padding="15sp"
        android:text="@string/Article3_Title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview_layout_GoToArticle2_btn" />

    <Button
        android:id="@+id/listview_layout_GoToArticle4_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/listview_rounded_btn_background"
        android:gravity="left"
        android:padding="15sp"
        android:text="@string/Article4_Title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview_layout_GoToArticle3_btn" />

    <Button
        android:id="@+id/listview_layout_GoToArticle5_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/listview_rounded_btn_background"
        android:gravity="left"
        android:padding="15sp"
        android:text="@string/Article5_Title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview_layout_GoToArticle4_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>